readme og stuff

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,8 @@
                     <target>19</target>
                 </configuration>
             </plugin>
+
+
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
@@ -106,6 +108,15 @@
                     </execution>
                 </executions>
             </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>3.0.0</version>
+                    <configuration>
+                        <mainClass>com.example.draugar.HelloApplication</mainClass>
+                    </configuration>
+                </plugin>
+
         </plugins>
     </build>
 </project>
